hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  selector:
    app: hello
  type: ClusterIP
  ports:
   - port: 80
     name: http
