container-registry-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: container-registry
  namespace: container-registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
   - host: registry.lesquerra.cat
     http:
      paths:
       - backend:
           serviceName: registry
           servicePort: 5000
  tls:
  - hosts:
    - registry.lesquerra.cat
    secretName: tlssecret
