default-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: homeservice-ingress
  namespace: default
spec:
  rules:
   - host: repasavinyo.lesquerra.cat
     http:
      paths:
        - backend:
            serviceName: nginx-deployment
            servicePort: 80
